<resources>
    <string name="image_tag">IMAGE_TAG</string>

    <string name="change_phone_number">更换手机号</string>
    <string name="login_password">登陆密码</string>
    <string name="order_service">接单服务</string>
    <string name="modify">修改</string>
    <string name="about_ower">关于我们</string>
    <string name="contact_service">联系客服</string>
    <string name="clean_cache">清理缓存</string>
    <string name="service_leader">服务指南</string>
    <string name="loginout">退出登录</string>

    <string name="user_activity_change_phone3">需注意</string>
    <string name="user_activity_change_phone4">1.更换手机后，您的会员卡、代金券、订单记录、地址将全部转移至新手机号下，原手机号将情况；\n2.更换成功后须用新手机登录；\n3.30天内最多进行3次手机号码变更；\n4.有任何其他疑问均可致电客服；</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="have_connected_with">已经和对方建立连接</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>

    <string name="bind_alias">绑定别名</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="no_call_data">没有通话数据</string>
</resources>
